<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:id="@+id/name_editText"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/text_view_toppings" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/checkbox_whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:text="@string/check_box_chocolate"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/text_view_quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:padding="8dp"
                android:text="+"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/button_order"
            android:textAllCaps="true"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>